[package]
name = "tzh"
version = "0.1.0"
edition = "2024"
authors = ["Vertsineu"]
license = "MIT"
description = "AI-powered translation tool supporting multiple languages and streaming output"
repository = "https://github.com/Vertsineu/tzh"
keywords = ["translation", "ai", "cli", "i18n", "localization"]
categories = ["command-line-utilities", "internationalization"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
toml = "0.8"
colored = "2.0"
